data from strapi consumed -1

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # this would be replaced later with the right url after the deployment of out backend
 NEXT_PUBLIC_STRAPI_URL = 'http://localhost:1337/api'
+IMAGES_DOMAIN = 'localhost'
