--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "js-cookie": "^3.0.1",
+    "js-cookies": "^1.0.4",
     "magic-sdk": "^9.0.0",
     "next": "12.2.5",
     "react": "18.2.0",
@@ -18,6 +20,7 @@
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.8",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
