--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.37.0",
+    "axios": "^0.27.2",
     "js-cookie": "^3.0.1",
     "js-cookies": "^1.0.4",
     "magic-sdk": "^9.0.0",
@@ -17,6 +19,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-query": "^3.39.2",
+    "stripe": "^10.10.0",
     "swr": "^1.3.0"
   },
   "devDependencies": {
