--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,9 @@ yarn-error.log*
 
 # local env files
 .env*.local
-
+.env.developement.local
+.env.test.local.env.production.local
+.env
 # vercel
 .vercel
 
