--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-query": "^3.39.2",
+    "react-toastify": "^9.0.8",
     "stripe": "^10.10.0",
     "swr": "^1.3.0"
   },
